--- a/pipservice-svnauthz.service
+++ b/pipservice-svnauthz.service
@@ -4,10 +4,8 @@ Description=SVNAuthz Service
 [Service]
 Type=simple
 WorkingDirectory=/usr/local/etc/svnauthz
-#ExecStart=/usr/bin/python authz.py --foreground
-ExecStart=/usr/bin/echo "authz start"
-#ExecStop=/usr/bin/pkill -f authz.py || /bin/echo "authz.py exited"
-ExecStop=/usr/bin/echo "authz stop"
+ExecStart=/usr/bin/python authz.py --foreground
+ExecStop=/usr/bin/pkill -f authz.py || /bin/echo "authz.py exited"
 Restart=on-failure
 
 [Install]
