--- a/pipservice-svnauthz.service
+++ b/pipservice-svnauthz.service
@@ -4,8 +4,7 @@ Description=SVNAuthz Service
 [Service]
 Type=simple
 WorkingDirectory=/usr/local/etc/svnauthz
-ExecStart=/usr/bin/python authz.py --foreground
-ExecStop=/usr/bin/pkill -f authz.py || /bin/echo "authz.py exited"
+ExecStart=/usr/local/bin/pipenv run python3 authz.py
 Restart=on-failure
 
 [Install]
